@@ -16,7 +16,6 @@
 namespace CassandraSharp.CQLPropertyBag
 {
     using System;
-    using System.Collections.Generic;
     using CassandraSharp.CQLBinaryProtocol;
     using CassandraSharp.Extensibility;
 
@@ -27,23 +26,23 @@ namespace CassandraSharp.CQLPropertyBag
         {
         }
 
-        public IObservable<IDictionary<string, object>> Execute(string cql, ConsistencyLevel cl = ConsistencyLevel.QUORUM,
-                                                                ExecutionFlags executionFlags = ExecutionFlags.None,
-                                                                object key = null)
+        public IObservable<PropertyBag> Execute(string cql, ConsistencyLevel cl = ConsistencyLevel.QUORUM,
+                                                ExecutionFlags executionFlags = ExecutionFlags.None,
+                                                object key = null)
         {
-            return Execute<IDictionary<string, object>>(cql, cl, executionFlags, key);
+            return Execute<PropertyBag>(cql, cl, executionFlags, key);
         }
 
-        public IPreparedQuery<IDictionary<string, object>> Prepare(string cql, ExecutionFlags executionFlags = ExecutionFlags.None)
+        public IPreparedQuery<PropertyBag> Prepare(string cql, ExecutionFlags executionFlags = ExecutionFlags.None)
         {
-            return Prepare<IDictionary<string, object>>(cql, executionFlags);
+            return Prepare<PropertyBag>(cql, executionFlags);
         }
 
         private class PropertyBagMapperFactory : IDataMapper
         {
             public IDataMapperFactory Create<T>(object dataSource)
             {
-                IDictionary<string, object> mapDataSource = (IDictionary<string, object>) dataSource;
+                PropertyBag mapDataSource = (PropertyBag) dataSource;
                 return new DataMapperFactory(mapDataSource);
             }
         }
